Fixed image overlapping issue

--- a/Client/src/Components/MyWork/myWork.css
+++ b/Client/src/Components/MyWork/myWork.css
@@ -10,7 +10,7 @@
     color: white;
 }
 #clockSpecialty{
-    width: 30vh;
+    width: 22vh;
 }
 li.slide.selected{
     padding-top: 2em;
@@ -29,6 +29,9 @@ div .card{
 }
 p{
     font-size: 20px;
+}
+.card-reveal p{
+    color: black;
 }
 .card .card-image{
     border-bottom: red solid .1em;
